--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -947,6 +947,7 @@ textarea {
       bottom: 2.5%;
       background-color: rgba(0, 0, 0, 0.85);
       border-radius: 5em;
+      overflow-y: scroll;
 
       .right {
         width: 40%;
