--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -949,6 +949,21 @@ textarea {
       border-radius: 5em;
       overflow-y: scroll;
 
+      .left {
+        width: 60%;
+        position: absolute;
+        top: 1.5em;
+
+        & > .action {
+          position: absolute;
+          left: 30%;
+          top: 50%;
+          transform: translateX(-50%);
+          background-color: rgba(255, 255, 255, 0.2);
+          border-color: rgba(255, 255, 255, 0.15);
+        }
+      }
+
       .right {
         width: 40%;
         left: 60%;
