--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -559,6 +559,8 @@ textarea {
             align-items: center;
             border: $square-border;
             color: $body-color;
+            height: 100%;
+            width: 100%;
 
             &:hover {
               overflow: visible;
@@ -764,7 +766,7 @@ textarea {
     #missions,
     #calendar {
       position: fixed;
-      top: 5em;
+      top: 7em;
       bottom: unset;
 
       &.open .results {
@@ -796,11 +798,11 @@ textarea {
     }
 
     #missions {
-      top: 9em;
+      top: 11em;
     }
 
     #calendar {
-      top: 13em;
+      top: 15em;
     }
     #score {
       position: fixed;
