--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -97,6 +97,16 @@ textarea {
         min-width: 30em;
       }
 
+      &.compact {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin-left: -50%;
+        width: 8em;
+        height: 8em;
+        overflow: hidden;
+      }
+
       &.priority,
       &.context {
         position: relative;
@@ -202,7 +212,8 @@ textarea {
       }
 
       &.mini {
-        pointer-events: none;
+        position: absolute;
+        top: 0;
         background-color: black;
         width: 100%;
         height: 100%;
@@ -541,17 +552,17 @@ textarea {
         left: 50%;
         transform: translateX(-50%);
         width: min-content;
-        margin-top: 0.5em;
+        margin-top: 1em;
 
         &.padbottom {
           margin-bottom: 2em;
         }
 
         .grid {
-          padding-top: 0.5em;
           display: grid;
 
-          .zone {
+          .zone,
+          .dropZone {
             position: relative;
             background: $square-bg;
             display: flex;
@@ -559,8 +570,6 @@ textarea {
             align-items: center;
             border: $square-border;
             color: $body-color;
-            height: 100%;
-            width: 100%;
 
             &:hover {
               overflow: visible;
@@ -815,6 +824,11 @@ textarea {
 
     .discard {
       min-height: 97vh;
+      > .dragZone {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .stack {
@@ -822,7 +836,8 @@ textarea {
       &.context {
         margin-bottom: 0;
 
-        .zone {
+        .zone,
+        .dropZone {
           margin: 0 auto;
 
           .content > p {
