--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -317,7 +317,7 @@ textarea {
               bottom: 0;
               font-size: 0.75em;
               padding: 0.25em;
-              pointer-events: none;
+              // pointer-events: none;
               margin: 0;
               background-color: rgba(0, 0, 0, 0.2);
 
@@ -354,11 +354,6 @@ textarea {
             position: relative;
             top: 0.33em;
           }
-        }
-
-        .action {
-          left: 50%;
-          transform: translateX(-50%);
         }
       }
 
@@ -824,32 +819,33 @@ textarea {
       }
     }
 
-    .stack {
-      &.context {
-        margin-top: 0.5em;
-        margin-bottom: 0;
+    #context .stack {
+      margin-top: 0.5em;
+      margin-bottom: 0;
 
-        .zone,
-        .dropZone {
-          margin: 0 auto;
+      .zone,
+      .dropZone {
+        margin: 0 auto;
 
-          .content > p {
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            text-align: center;
-          }
-        }
-        .card {
-          margin-top: 0;
-
-          &.context {
-            margin-top: 0;
-            margin-bottom: 0;
-            box-shadow: -7px -7px 7px 1px rgba(21, 21, 21, 0.5);
-          }
+        .content > p {
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          text-align: center;
         }
       }
+      .card {
+        margin-top: 0;
+
+        &.context {
+          margin-top: 0;
+          margin-bottom: 0;
+          box-shadow: -7px -7px 7px 1px rgba(21, 21, 21, 0.5);
+        }
+      }
+    }
+
+    .stack {
       .card {
         margin-top: 0.5em;
         margin-bottom: 0.5em;
