fixed width of popups

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -120,6 +120,7 @@ textarea {
         .content > p {
           margin-top: 0;
           margin-bottom: 0;
+          overflow-wrap: break-word;
         }
       }
 
