fixed bug for missing parents

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -126,6 +126,10 @@ textarea {
         height: 8em;
         overflow: hidden;
         transform: unset;
+
+        .coin {
+          position: absolute;
+        }
       }
 
       &.priority,
