--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -895,6 +895,10 @@ textarea {
 
     // search popup panel
     #search {
+      .popupPanel {
+        max-height: 77vh;
+      }
+
       .actionCircle {
         top: unset;
         bottom: 0.5em;
@@ -1220,7 +1224,12 @@ textarea {
     }
 
     // attempt to change the color of a hardcoded SVG, failed and currently unused
-    svg .checkmark {
+    .checkmark {
+      height: 2em;
+      fill: white;
+      margin-top: 0.75em;
+      outline: none;
+
       &.red {
         fill: $card-red;
       }
