--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1172,6 +1172,8 @@ textarea {
         font-size: 0.9em;
         padding: 0.2em 0.4em;
         transform: translateX(50%);
+        width: max-content;
+        max-width: 4em;
       }
     }
 
