--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1290,6 +1290,11 @@ textarea {
       border: 0.2em solid yellow;
       pointer-events: none;
     }
+
+    #searchResults {
+      overflow-y: scroll;
+      max-height: 39em;
+    }
   }
 }
 
