fixed hover on completed checkmarks

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1225,7 +1225,7 @@ textarea {
           transform: unset;
           left: unset;
           line-height: 2em;
-          pointer-events: none;
+          // pointer-events: none;
 
           img {
             width: 1.5em;
