aging member cards

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -390,7 +390,7 @@ textarea {
         overflow-wrap: break-word;
 
         a {
-          text-shadow: 0 0 1em #fff;
+          text-shadow: 0 0 1em #fff, 0 0 0.5em #fff;
         }
 
         p img {
