added points from cards popup

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -935,7 +935,7 @@ textarea {
       right: 5em;
       bottom: 1em;
       font-size: 1.2em;
-      pointer-events: none;
+      cursor: default;
     }
 
     // logout button in main menu
