fixed missing shadow on full card (first card in stack before context)

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -106,6 +106,8 @@ textarea {
       }
 
       &.full {
+        box-shadow: -7px -7px 7px 1px rgba(21, 21, 21, 0.5);
+
         .priority {
           min-height: 2.325em;
 
