added border to iframe on mini cards to create a drag handle

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -279,6 +279,7 @@ textarea {
           position: relative;
           font-size: 0.8em;
           margin: 0;
+          height: 100%;
         }
 
         & > .hud {
@@ -1299,7 +1300,18 @@ textarea {
     }
 
     .card iframe {
-      max-width: 100%;
+      max-width: calc(100% - 2em);
+      max-height: calc(100% - 2em);
+      margin: 1em;
+
+      &:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: '~';
+        background-color: rgba(0, 0, 0, 0.2);
+        padding: 0.25em;
+      }
     }
 
     .card.searchedOnPage:after {
