only break long links not all words

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -390,10 +390,11 @@ textarea {
         position: relative;
         margin: 1em auto;
         max-width: 28em;
-        overflow-wrap: break-word;
 
         a {
           text-shadow: 0 0 1em #fff, 0 0 0.5em #fff;
+          overflow-wrap: break-word;
+          word-break: break-all;
         }
 
         p img {
